--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": "jensone/daily-trip",
-    "description": "A PHP application for tracking daily trips",
-    "type": "project",
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "MbaM2\\DailyTrip\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Jensone"
-        }
-    ],
-    "require": {}
+  "name": "jensone/daily-trip",
+  "description": "A PHP application for tracking daily trips",
+  "type": "project",
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "MbaM2\\DailyTrip\\": "src/"
+    }
+  },
+  "authors": [
+    {
+      "name": "Lucas"
+    }
+  ],
+  "require": {}
 }
